@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.21728 2022/04/24 21:56:14 tnn Exp $
+$NetBSD: TODO,v 1.21729 2022/04/25 07:18:45 wiz Exp $
 
 Suggested new packages
 ======================
@@ -526,6 +526,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o cacti-spine-1.2.16
 	o calc-2.11.10.1
 	o calcoo-2.1.0
+	o calibre-5.41.0
 	o calligra-3.0.1 [in wip; koffice successor]
 	o camlp4-4.12
 	o camlp5-714
